# waybar-modules

./: .gitignore  Cargo.toml  Makefile  README.md
cffi/cmnt-graph copy 2/: cmnt-graph.json
cffi/cpu-graph/lib/: cpu-graph.json
cffi/mem-graph/lib/: mem-graph.json  mem-graph.rs
cffi/temp-graph/: Cargo.toml
cffi/temp-graph/lib/: temp-graph.json
cffi/waybar-cffi-sys/: Cargo.toml
cmnt-graph/: cmnt-graph.json  cmnt-graph.rs
cmnt-graph copy 2/: cmnt-graph.rs
cpu-graph/: Cargo.toml
cpu-graph/lib/: cpu-graph.json  cpu-graph.rs
mem-graph/: Cargo.toml
mem-graph/lib/: mem-graph.json  mem-graph.rs
temp-graph/lib/: temp-graph.rs
v0/: HOWTO_USE.md  LICENSE  OTHER.md
v0/waybar-arch-updates-rs/src/: main.rs
v0/waybar-cffi-rs/: README.md
v0/waybar-cffi-rs/waybar-cffi-sys/: Cargo.toml
v0/waybar-cffi-rs/waybar-cffi-sys/src/: lib.rs
v0/waybar-cffi-rs/waybar-cffi/examples/: hello-world.json
v0/waybar-cffi-rs/waybar-cffi/src/: config.rs  info.rs
v0/waybar-cpu-graph-rs/: Cargo.toml
v0/waybar-cpu-graph-rs/src/: main.rs
waybar-archupdates-rs/: Cargo.toml  HOWTO_USE.md
waybar-archupdates-rs/src/: checkupdates-with-aur.sh  main.rs
waybar-cffi-rs/: Cargo.toml  Makefile
waybar-cffi-rs/waybar-cffi/: Cargo.toml  WAYBAR_VERSION
waybar-cffi-rs/waybar-cffi/examples/: cmnt-graph.json  cmnt-graph.rs  cpnt-graph.json  cpnt-graph.rs  cpu-graph.rs  hello-world.rs
waybar-cffi-rs/waybar-cffi/src/: error.rs  lib.rs
waybar-cffi-sys/src/: raw.rs
waybar-cpu-graph-rs/: Cargo.toml  HOWTO_USE.md
waybar-cpu-graph-rs/src/: main.rs
waybar-disk-space-rs/: Cargo.toml  HOWTO_USE.md
waybar-disk-space-rs/src/: main.rs
waybar-disk-usage-rs/: Cargo.toml  HOWTO_USE.md
waybar-disk-usage-rs/src/: main.rs
waybar-mem-graph-rs/: Cargo.toml  HOWTO_USE.md
waybar-mem-graph-rs/src/: cpu-graph.json  main.rs
waybar-net-graph-rs/: Cargo.toml  HOWTO_USE.md
waybar-net-graph-rs/src/: main.rs
waybar-stocks-ticker-rs/: Cargo.toml
waybar-stocks-ticker-rs/src/: main.rs
waybar-temp-graph-rs/: Cargo.toml  HOWTO_USE.md
waybar-temp-graph-rs/src/: main.rs
