[package]
name = "waybar-modules"
version = "0.1.0"
edition = "2024"

[lib]
name = "cmnt_graph"
path = "./cmnt-graph/cmnt-graph.rs"
crate-type = ["cdylib"]

[dev-dependencies]
serde = { "version" = "1.0.218", features = ["derive"] }

[dependencies]
waybar-cffi = "0.1.0"
#waybar-cffi-sys = { version = "0.1.0", path = "./waybar-cffi-sys" }
itertools = "0.14.0"
serde = "1.0.218"
thiserror = "2.0.12"
sysinfo="0.34.2"
