[workspace]
resolver = "2"
members = [
    "waybar-cpu-graph-rs",
    "waybar-mem-graph-rs",
    "waybar-net-graph-rs",
    "waybar-temp-graph-rs",
	"waybar-archupdates-rs",
    "waybar-stocks-ticker-rs"
]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1